# alzai

./: AGENTS.md  Cargo.toml  README.md  SPECS.md
.agents/memory/events/: architecture.jsonl  pitfalls.jsonl
.agents/memory/facts/: architecture.md  pitfalls.md
.agents/memory/state/: topic_offsets.json
src/: cmd_context.rs  cmd_log.rs  cmd_reflect.rs  cmd_status.rs  cmd_sync.rs  colors.rs  events.rs  fs_util.rs  lib.rs  llm.rs  main.rs  offsets.rs  repo.rs  types.rs
tests/: context_tests.rs  event_tests.rs  offset_tests.rs  reflect_tests.rs
