[package]
name = "alzai"
version = "0.0.1"
edition = "2024"
rust-version = "1.94.1"
description = "Repo-local agent knowledge system"

[lib]
name = "alzai"
path = "src/lib.rs"

[[bin]]
name = "alzai"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"

[dev-dependencies]
tempfile = "3"
